# alx_travel_app_0x00

./: README.md  pyproject.toml
alx_travel_app/: settings.py
alx_travel_app/alx_travel_app/: settings.py
alx_travel_app/listings/: serializers.py
