[tool.poetry]
name = "alx-travel-app-0x00"
version = "0.1.0"
description = ""
authors = ["DINAMOW <meemoo102039@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.6"
django-restframework = "^0.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
